--- a/applications/dashboard/scss/_forms.scss
+++ b/applications/dashboard/scss/_forms.scss
@@ -48,6 +48,7 @@ label,
 .label {
   font-weight: 500;
   margin-bottom: 0;
+  word-break: break-all;
 }
 
 .form-control {
@@ -911,6 +912,7 @@ label[id^=iCheck] {
 
 .text-input-button {
   display: flex;
+  width: 100%;
   align-items: center;
 
   input {
