--- a/applications/dashboard/scss/_forms.scss
+++ b/applications/dashboard/scss/_forms.scss
@@ -675,6 +675,29 @@ select + select {
   .description {
     display: none;
   }
+
+  .label-selector-item {
+    position: relative;
+  }
+
+  .label-selector-corner-link {
+    position: absolute;
+    display: block;
+    width: to-rem(24);
+    top: $spacer / 2;
+    right: $spacer / 2;
+
+    svg {
+      display: block;
+      fill: $white;
+    }
+
+    a {
+      &:hover svg {
+        fill: $navbar-active-link-active-bg;
+      }
+    }
+  }
 }
 
 .theme-wrap {
