--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -8610,6 +8610,7 @@ button.close {
   -ms-flex-order: 2;
   order: 2;
   position: relative;
+  overflow: auto;
   padding-left: 1.125rem;
   padding-right: 1.125rem;
   max-width: 1024px;
