--- a/applications/dashboard/scss/_scaffold.scss
+++ b/applications/dashboard/scss/_scaffold.scss
@@ -5,6 +5,7 @@
 .main {
   order: 2;
   position: relative;
+  overflow: auto;
   padding-left: $padding-default;
   padding-right: $padding-default;
   max-width: 1024px;
